# Capsule

./: .gitignore  LICENSE  README.md  pyproject.toml
capsule/: __main__.py  cli.py  constants.py
capsule/utils/: callback.py  model.py  nextcloud.py
